--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "lottie-react-native": "^4.0.3",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-camera": "^4.0.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "^0.28.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
