--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/stack": "^6.0.1",
+    "axios": "^0.21.1",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
     "react": "17.0.1",
