--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.0.3",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-camera": "^4.0.1",
